--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,16 +14,22 @@ futures = "0.3.26"
 jsonwebtoken = "8.2.0"
 lazy_static = "1.4.0"
 log = "0.4.17"
+logging_timer = "1.1.0"
 once_cell = "1.17.1"
 prost = "0.11.6"
 rs-snowflake = "0.6.0"
 serde = { version = "1.0.152", features = ["derive"] }
-sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "uuid", "time"] }
-tokio = { version = "1.25.0", features = ["macros", "sync", "rt-multi-thread"] }
-tokio-stream = "0.1.11"
+sqlx = { version = "0.6.2", features = [
+	"runtime-tokio-rustls",
+	"mysql",
+	"uuid",
+	"time",
+] }
+tokio = { version = "1.26.0", features = ["macros", "sync", "rt-multi-thread"] }
+tokio-stream = { version = "0.1.12", features = ["net"] }
 tonic = "0.8.3"
 tonic-web = "0.5.0"
-tower-http = { version = "0.3.5", features = ["cors", "tokio"]}
+tower-http = { version = "0.4.0", features = ["cors", "tokio"] }
 
 [build-dependencies]
 tonic-build = "0.8.4"
